# kv_cache_adapter

./: .gitignore  __init__.py  adapter.py  benchmark_lmcache_backend.py  benchmark_npu_block_dim.py  benchmark_runtime_paths.py  kv_cache_adapter_npu_custom.py  profile_npu_runtime.py  setup.py  test_adapter.py  test_adapter_npu.py  test_adapter_npu_kernels.py  test_program.py
csrc/: binding.cpp  kv_adapter_cuda.cu  kv_adapter_npu.cpp
csrc/ascend/: CMakeLists.txt  adapter_meta_kernels.cpp  adapter_meta_kernels.h  pybind.cpp
csrc/ascend/kernels/: CMakeLists.txt  adapter_metadata_kernels.cpp  adapter_metadata_kernels.h
